# sangokushi-gpt

./: .dockerignore  .env.example  .env.vault  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  Makefile  biome.json  bun.lockb  components.json  compose.yml  fly.qdrant.toml  fly.toml  package.json  pnpm-lock.yaml  remix.config.js  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
api/: .dockerignore  .gitignore  Dockerfile  build_db.py  clustering.py  fly.toml  generate-openapi-json.py  openapi.json  parse.py  pyproject.toml  query.py  server.py  setup.py
api/prisma/: schema.prisma
api/prisma/migrations/20230829004827_init/: migration.sql
api/prisma/migrations/20230829080404_init/: migration.sql
api/src/api/: test.py
api/src/sangokushi_api/commands/: build_db.py  clustering.py  finetune.py  generate-openapi-json.py
api/src/sangokushi_api/parser/: parse_text.py  remover.py
api/src/sangokushi_api/routes/: cluster.py  doc.py  embedding.py  search.py
api/src/sangokushi_api/services/: database.py  embedding.py  influence.py
app/: entry.client.tsx  entry.server.tsx  root.tsx
app/components/: AppLayout.tsx  Logo.tsx
app/components/ui/: avatar.tsx  button.tsx  card.tsx  center.tsx  dropdown-menu.tsx  heading.tsx  index.ts  input.tsx  label.tsx  popover.tsx  progress.tsx  stack.tsx  table.tsx  tabs.tsx  tooltip.tsx
app/features/sangokushi/actions/: generate-action.server.ts
app/features/sangokushi/components/: SectionReference.tsx
app/features/sangokushi/hooks/: useGenerator.ts
app/features/sangokushi/services/: sangokushi-search.server.ts  vector-search.server.ts
app/models/: section.server.ts
app/routes/: _._index.tsx  _.search.tsx  _.tsx  _index.tsx  api.generate.ts  ogp.tsx  resource.ogp.tsx  search.tsx  test.tsx
app/routes/_public/: route.tsx
app/routes/_public._index/: route.tsx
app/routes/_public.search/: queries.server.ts  route.tsx
app/routes/resources.generate/: route.ts
app/services/: api-client.d.ts  api.server.ts  env.server.ts  gemini.server.ts  ogimage.server.tsx  openai-chat-stream.server.ts  openai-embedding.server.ts  qdrant.server.ts  session.server.ts  simcse-embedding.server.ts
app/services/.server/: duckdb.server.ts
app/services/api-client/: index.ts
app/services/api-client/models/: Doc.ts  DocListItem.ts  EmbeddingParams.ts  EmbeddingResponse.ts  ScoredDoc.ts  SearchResponse.ts
app/services/api-client/services/: DefaultService.ts
app/services/db/: index.ts  schema.ts
app/types/: model.ts
prisma/: schema.prisma
prisma/migrations/20230612202524_section/: migration.sql
prisma/migrations/20230820123434_init/: migration.sql
prisma/migrations/20240831035235_init/: migration.sql
qdrant/: Dockerfile  fly.toml  qdrant.config.development.yaml  qdrant.config.production.yaml
scripts/: build-index.ts  cleanAndConvertFiles.ts  cli.ts  make-index.ts  qdrant.ts  vector-store.ts
scripts/convert/: 01_clean.ts  02_structure.ts  03_embed.ts  04_qdrant-upsert-index.ts  04_upsert.ts  chapterize.ts  cleanAndConvertFiles.ts  database-import.ts  embed.ts  index-test.ts  index.ts  initialize-index.ts  pinecone-upsert-index.ts  qdrant-upsert-index.ts  upsert-index.ts
scripts/reference/: make_index.py
scripts/services/: cleanAndConvertFiles.ts  embed.ts  qdrant.ts
scripts/utils/: hash-chunks.ts  hashChunk.ts  parse-text.ts  parseText.ts  remove-header-and-footer.ts  remove-ruby-and-symbols.ts  removeHeaderAndFooter.test.ts  removeHeaderAndFooter.ts  removeRubyAndSymbols.test.ts  removeRubyAndSymbols.ts
types/: model.ts
