[project]
name = "api"
version = "3.10.11"
description = "Add your description here"
authors = [
    { name = "coji", email = "coji@techtalk.jp" }
]
dependencies = [
    "sentence-transformers>=2.2.2",
    "fugashi[unidic-lite]>=1.2.1",
    "fastapi>=0.101.1",
    "pydantic>=2.2.1",
    "uvicorn[standard]>=0.23.2",
    "torch==2.0.1",
    "hyperdb-python>=0.1.4",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.33",
    "matplotlib>=3.7.2",
    "umap-learn>=0.5.3",
    "llvmlite>=0.40.1",
    "numba>=0.57.1",
    "setuptools>=68.1.2",
    "bertopic>=0.15.0",
    "prisma>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
type = "index"

[tool.rye.scripts]
start = { cmd = 'uvicorn server:app --reload --host 0.0.0.0 --port 8000', env = { ENV = 'development' } }
"build:db" = { cmd = 'python build_db.py'}

[tool.hatch.metadata]
allow-direct-references = true
